# internship-bascorro

./: .gitattributes  README.md  day1.md  day2.md  soal_exrec_bascorro_ez.md
Exrec_Programe_Bascorro_2025/Soal_Exrec_Program_Bascorro/: Soal1_Exrec_Program_Bascorro.docx  Soal2_Exrec_Program_Bascorro.docx  Soal3_Exrec_Program_Bascorro.docx  Soal4_Exrec_Program_Bascorro.docx  Soal5_Exrec_Program_Bascorro.docx  Soal6_Exrec_Program_Bascorro.docx
Exrec_Programe_Bascorro_2025/project_ros1_noetic/src/turtlesim_project_cpp/: CMakeLists.txt
Exrec_Programe_Bascorro_2025/project_ros1_noetic/src/turtlesim_project_py/: package.xml
INTERNSHIP/day2/robot_control/: pyscript11.py  robot_control_class2.py  test_if.py  test_methods_1.py  test_methods_3.py
INTERNSHIP/day3/: README.md
INTERNSHIP/day4/: README.md
INTERNSHIP/day4/OpenCV-TWT/: tutorial1.py  tutorial7.py
INTERNSHIP/day6/: README.md
INTERNSHIP/day7/: README.md  deploy_model.py  main.py  pleasee.py
INTERNSHIP/day9/: publisher.py
INTERNSHIP/final_projects/Ball_Detection_Using_OpenCV/: FINAL_README.md  a.py  cari_bound.py  cari_bound_2.py  final_1.py  final_2.py
INTERNSHIP/final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/my_robot_msgs/: CMakeLists.txt
INTERNSHIP/final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/turtlesim_project_py/: CMakeLists.txt  package.xml
INTERNSHIP/final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/turtlesim_project_py/scripts/: target_publisher.py
INTERNSHIP/final_projects/ROS1_to_ROS2_Migration_Project/project_ros1_noetic/src/my_robot_bringup/: package.xml
INTERNSHIP/final_projects/ROS1_to_ROS2_Migration_Project/project_ros1_noetic/src/turtlesim_project_cpp/: package.xml
INTERNSHIP/final_projects/ROS1_to_ROS2_Migration_Project/project_ros1_noetic/src/turtlesim_project_cpp/src/: turtle_controller.cpp
INTERNSHIP/final_projects/ROS2_Nodes_Project/: README.md  subscriber2.py
INTERNSHIP/final_projects/ROS2_Nodes_Project/project/install/: local_setup.sh
INTERNSHIP/final_projects/ROS2_Nodes_Project/project/src/my_robot_controller/: setup.py
INTERNSHIP/final_projects/ROS2_Nodes_Project/project/src/my_robot_controller/my_robot_controller/: pose_subscriber.py  publisher.py
RESEARCH/: README.md
RESEARCH/CUSTOM_YOLO/: README.md
RESEARCH/CUSTOM_YOLO/D-FINE/: .gitignore
RESEARCH/CUSTOM_YOLO/D-FINE/configs/dataset/: custom_detection.yml  custom_gawangBola.yml
RESEARCH/CUSTOM_YOLO/D-FINE/data/GawangBola/: README.dataset.txt  README.roboflow.txt
RESEARCH/CUSTOM_YOLO/D-FINE/data/GawangBola/test/: _annotations.coco.json
RESEARCH/CUSTOM_YOLO/D-FINE/data/GawangBola/valid/: _annotations.coco.json
RESEARCH/CUSTOM_YOLO/D-FINE/data/HardHatSample/annotations/: instances_train.json  instances_val.json
RESEARCH/CUSTOM_YOLO/GawangBola.v1i.coco/train/: _annotations.coco.json
RESEARCH/NextGen_ComputerVision_YOLOv8_DINO-GPT4V_OpenCV4_FaceRec_GenAI_Diffusion_Transformers/1-Introduction/: README.md
RESEARCH/NextGen_ComputerVision_YOLOv8_DINO-GPT4V_OpenCV4_FaceRec_GenAI_Diffusion_Transformers/2-OpenCV-ImageOperation/: README.md
day1/: README.md
day2/: README.md
day2/robot_control/: dictionaries.py  lists.py  robot_control_class.py  robot_control_class2.py  test_for.py  test_input.py  test_methods_2.py
day3/: MODUL_1_C++_BASICS.md
day3/src/: unit3_exercise.cpp
day4/: README.md  hough_circle2.py
day4/OpenCV-TWT/: HoughCircle.py  main.py  tutorial2.py  tutorial3.py  tutorial4.py  tutorial5.py  tutorial8.py
day5/: README.md
day7/: README.md  main.py
day8/: README.md
day9/: README.md  subscriber1.py
final_projects/: Ball_Detection_Using_OpenCV.md  final_1.py
final_projects/Ball_Detection_Using_OpenCV/: README.md  cari_bound.py  final_1.py  final_3.py
final_projects/Object_Detection_Using_YOLOv5/: README.md  main.py
final_projects/ROS1_to_ROS2_Migration_Project/: README.md
final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/my_robot_bringup/: CMakeLists.txt  package.xml
final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/my_robot_bringup/launch/: turtlesim_project.launch.py
final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/my_robot_msgs/: CMakeLists.txt  package.xml
final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/turtlesim_project_cpp/: CMakeLists.txt  package.xml
final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/turtlesim_project_cpp/src/: target_publisher.cpp  turtle_controller.cpp
final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/turtlesim_project_py/: CMakeLists.txt  setup.py
final_projects/ROS1_to_ROS2_Migration_Project/jawaban_project_ros1_noetic/src/turtlesim_project_py/turtlesim_project_py/: turtle_controller.py
final_projects/ROS1_to_ROS2_Migration_Project/project_ros1_noetic/src/my_robot_bringup/launch/: turtlesim_project.launch
final_projects/ROS1_to_ROS2_Migration_Project/project_ros1_noetic/src/turtlesim_project_cpp/src/: target_publisher.cpp
final_projects/ROS1_to_ROS2_Migration_Project/project_ros1_noetic/src/turtlesim_project_py/scripts/: target_publisher.py  turtle_controller.py
final_projects/ROS2_Nodes_Project/: README.md
final_projects/ROS2_Nodes_Project/project/install/: setup.sh
final_projects/ROS2_Nodes_Project/project/install/my_robot_controller/share/my_robot_controller/: package.xml
final_projects/ROS2_Nodes_Project/project/src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  subscriber1.py  subscriber2.py  turtle_controller.py
(+1 files in other folders)
