<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_project_py</name>
  <version>0.0.0</version>
  <description>The turtlesim_project_py package</description>
  <maintainer email="ed@todo.todo">ed</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>my_robot_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>my_robot_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>my_robot_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <export>

  </export>
</package>
