<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_project_py</name>
  <version>0.0.0</version>
  <description>The turtlesim_project_py package</description>
  <maintainer email="ed@todo.todo">ed</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
