<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_project_cpp</name>
  <version>0.0.0</version>
  <description>The turtlesim_project_cpp package</description>
  <maintainer email="ed@todo.todo">ed</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>my_robot_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_export_depend>my_robot_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>my_robot_msgs</exec_depend>

  <export>

  </export>
</package>
